# uncalled-for

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  loq.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/uncalled_for/: __init__.py  _annotations.py  _functional.py  _introspection.py  _resolution.py  _shared.py  _validation.py  classy.py
tests/: test_annotations.py  test_classy_concurrency.py  test_classy_dependencies.py  test_classy_inheritance.py  test_dependency.py  test_depends.py  test_introspection.py  test_resolution.py  test_shared.py  test_validation.py  test_without_dependencies.py
