[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uncalled-for"
version = "0.0.1"
description = "Async dependency injection for Python functions"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Chris Guidry", email = "guid@omg.lol" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "loq>=0.1.0a3",
    "mypy>=1.14.1",
    "prek>=0.3.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=4.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.14",
]

[project.urls]
"Repository" = "https://github.com/chrisguidry/uncalled-for"
"Bug Tracker" = "https://github.com/chrisguidry/uncalled-for/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/uncalled_for"]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
addopts = [
    "--cov=src/uncalled_for",
    "--cov=tests",
    "--cov-report=term-missing:skip-covered",
    "--cov-branch",
    "--cov-fail-under=100",
    "--timeout=30",
    "--import-mode=importlib",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
filterwarnings = ["error"]

[tool.coverage.report]
exclude_also = ["\\.\\.\\.$"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
